Implement multiple outputs in recipes

--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -18,6 +18,7 @@ elementgui.jeirecipetype.width=Texture width:
 elementgui.jeirecipetype.height=Texture height:
 elementgui.jeirecipetype.slot_type=Slot type:
 elementgui.jeirecipetype.slot_id=Get item from ingredient:
+elementgui.jeirecipetype.output_slot_id=Get item from the result:
 elementgui.jeirecipetype.intlist=Require specification of ingredient count:
 elementgui.jeirecipetype.stringlist=Include text data in recipe:
 elementgui.jeirecipetype.add_entry=Add GUI slot
@@ -26,14 +27,16 @@ elementgui.jeirecipetype.crafting_empty=You must choose at least one crafting ta
 elementgui.jeirecipetype.recipetype_needs_title=The recipe type must have a title.
 elementgui.jeirecipetype.missing_texture=The recipe type must have a background texture.
 elementgui.jeirecipe.category=Recipe category:
-elementgui.jeirecipe.result=Result item:
-elementgui.jeirecipe.result_count=Item count:
+elementgui.jeirecipe.result=Result items:
+elementgui.jeirecipe.result_count=Item counts:
 elementgui.jeirecipe.integers=Ingredient counts
 elementgui.jeirecipe.strings=Optional text data
 elementgui.jeirecipe.ingredients=Recipe ingredients
 elementgui.jeirecipe.no_category=You must select a category for the recipe.
 elementgui.jeirecipe.no_ingredients=The recipe must have ingredients.
 elementgui.jeirecipe.no_result=The recipe must have a result.
+elementgui.jeirecipe.results_mismatch=The recipe can not have more results than specified in the recipe type.
+elementgui.jeirecipe.result_counts_mismatch=You cannot have more result counts than results.
 elementgui.jeirecipe.ingredient_mismatch=The amount of ingredients in the recipe and recipe type don't match.
 elementgui.jeirecipe.ingredient_count_mismatch=The amount of ingredients in the recipe and ingredient counts specified don't match.
 elementgui.jei.needs_api=The Just enough items API must be enabled in workspace settings to save this mod element.
