--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -52,10 +52,11 @@ elementgui.jeiinformation.needs_items=You need to include items that use the des
 blockly.block.item_list.ingredient=Ingredient
 blockly.block.item_list_mutator.container=Recipe ingredients
 blockly.block.item_list_mutator.input=Ingredient
-blockly.block.get_recipe_result=Get the result of the recipe type %1 from the ingredients:
-blockly.block.recipe_result_foreach=Get the result of the recipe type %1 as %2 %3 from the ingredients: 
-blockly.block.ingredient_counts_foreach=For each ingredient count as %2 for recipe result %1 do %3
-blockly.block.string_data_foreach=For each string data entry as %2 for recipe result %1 do %3
+blockly.block.get_recipe_result=Get the first result of the recipe type %1 from the ingredients:
+blockly.block.recipe_result_foreach=Get the result of the recipe type %1 as %2 %3 from the ingredients:
+blockly.block.recipe_result_iterator_foreach=For each item of recipe result %1 as %2 do %3
+blockly.block.ingredient_counts_foreach=For each ingredient count as %1 for recipe type inside statement %2 do %3
+blockly.block.string_data_foreach=For each string data entry as %1 for recipe type inside statement %2 do %3
 blockly.block.string_iterator=String iterator
 blockly.block.number_iterator=Number iterator
 blockly.block.recipe_result=Recipe result
