implement custom gui builder

--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -23,6 +23,7 @@ elementgui.jeirecipetype.intlist=Require specification of ingredient count:
 elementgui.jeirecipetype.stringlist=Include text data in recipe:
 elementgui.jeirecipetype.add_entry=Add GUI slot
 elementgui.jeirecipetype.slots=GUI slots
+elementgui.jeirecipetype.gui_editor=GUI elements
 elementgui.jeirecipetype.crafting_empty=You must choose at least one crafting table.
 elementgui.jeirecipetype.recipetype_needs_title=The recipe type must have a title.
 elementgui.jeirecipetype.missing_texture=The recipe type must have a background texture.
@@ -57,6 +58,7 @@ blockly.block.recipe_result_foreach=Get the result of the recipe type %1 as %2 %
 blockly.block.recipe_result_iterator_foreach=For each item of recipe result %1 as %2 do %3
 blockly.block.ingredient_counts_foreach=For each ingredient count as %1 for recipe type inside statement %2 do %3
 blockly.block.string_data_foreach=For each string data entry as %1 for recipe type inside statement %2 do %3
+blockly.block.string_data_dependency_foreach=For each string data entry as %1 from provided dependency %2 do %3
 blockly.block.string_iterator=String iterator
 blockly.block.number_iterator=Number iterator
 blockly.block.recipe_result=Recipe result
