Add entity model and sprite

--- a/src/main/resources/lang/texts.properties
+++ b/src/main/resources/lang/texts.properties
@@ -64,3 +64,4 @@ blockly.block.number_iterator=Number iterator
 blockly.block.recipe_result=Recipe result
 dialog.selector.recipes.message=Select a recipe type:
 dialog.integer_list_editor.title=Integer list editor
+dialog.gui.sprite_update_interval=Sprite update interval:
